# src/routes/brand.route.js
@@ -1,7 +1,8 @@
 import express from "express";
 import asyncHandler from 'express-async-handler';
+import { jwtMiddleware } from "../../config/userJwtMiddleWare.js";
 
-import { brandInfo, brandProductList } from "../controllers/brand.controller.js";
+import { brandInfo, brandProductList, brandOrderList } from "../controllers/brand.controller.js";
 import {createBrand, updateBrand} from '../controllers/brand.controller.js';
 
 export const brandRouter = express.Router();
@@ -11,3 +12,4 @@ brandRouter.patch('/:id', updateBrand); // login_required 추가
 
 brandRouter.get('/:brandId', asyncHandler(brandInfo));
 brandRouter.get('/:brandId/products', asyncHandler(brandProductList));
+brandRouter.get('/creator/orders', jwtMiddleware, asyncHandler(brandOrderList));
