# swagger/brand.swagger.yaml
@@ -411,3 +411,86 @@ paths:
               message:
                 type: string
                 example: 존재하지 않는 브랜드입니다.
+  /brand/creator/orders:
+    get:
+      tags:
+        - Brand
+      summary: 브랜드 정보 조회
+      description: |
+        브랜드 프로필의 브랜드 정보를 제공합니다. 
+        brandId = 브랜드id
+      responses:
+        '200':
+          description: 브랜드 정보 조회 성공
+          schema:
+            type: object
+            properties:
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "SUCCESS!"
+              result:
+                type: array
+                example: {
+                  "orders": [
+                    {
+                      "order_num": 1,
+                      "order_date": "2024.08.05",
+                      "product_name": "상품명",
+                      "options": "색상: 초록, 사이즈: s",
+                      "quantity": 1,
+                      "total_price": 9000,
+                      "receiver": "김로컬",
+                      "phone": "010-1111-1111",
+                      "zip_code": "12345",
+                      "address": "주소",
+                      "spec_address": "상세주소"
+                    },
+                    {
+                      "order_num": 2,
+                      "order_date": "2024.08.06",
+                      "product_name": "상품명",
+                      "options": "색상: 빨강, 사이즈: m",
+                      "quantity": 2,
+                      "total_price": 18000,
+                      "receiver": "홍길동",
+                      "phone": "010-2222-2222",
+                      "zip_code": "54321",
+                      "address": "주소",
+                      "spec_address": "상세주소"
+                    }
+                  ]
+                }
+        '400':
+          description: 크리에이터가 아닌 일반 유저 에러
+          schema:
+            type: object
+            properties:
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: string
+                example: BRAND4003
+              message:
+                type: string
+                example: 크리에이터가 아닌 일반 유저입니다. 
+        '401':
+          description: 토큰 에러
+          schema:
+            type: object
+            properties:
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: string
+                example: USER4007
+              message:
+                type: string
+                example: 유효하지 않은 토큰입니다.
